--- a/Preamble.sty
+++ b/Preamble.sty
@@ -1,5 +1,6 @@
 \ProvidesPackage{Preamble}
 \usepackage{mathtools}
+\usepackage{parskip}
 \usepackage{unicode-math}
 \usepackage{tabularx} % extra features for tabular environment
 \usepackage{amsmath}  % improve math presentation
