--- a/Master.tex
+++ b/Master.tex
@@ -24,16 +24,42 @@
 		\vspace{0.8cm}
 	\end{center}
 \end{titlepage}
+\vspace{1cm}
+
+\chapter*{Abstract}
+
+\subsection*{CHAPTER 1: INTRODUCTION}
+
+Over the past 150 year supramolecular chemistry has grown exponentially: the field has expanded to include a wide range of applications, in what can be the defined as a new chemical space.\\
+This chapter aims to provide a brief historical account of the most significant development in supramolecular chemistry, specifically speaking about MOFs and 3D periodic structures and their implementation in gas adsorption and electrochemistry applcations.
+
+\newline\subsection*{CHAPTER 2: RESULT AND DISCUSSION}
+
+The construction of 3D periodic solid structure oriented towards specific gas adsorbpion remain a challenging syntethic problem for chemists, several problem related to their development and use must be accounted.\\
+In this chapter will be reported the advancement in the sythesis of a pyrazole based ligand and the utilization of a 1,3 diketons ligand in electrochemistry oriented application.
+
+\newline\subsection*{CHAPTER 3: EXPERIMENTAL SECTION}
+
+Several syntethis and characterization method as been applied, both in the sythesis of pyrazole based ligand and 1,3 diketones MOF electrochemistry exploration, in order to achieve the results discussed earlier. \\
+They will be analyzed in great detail in this chapter.
+
+\newline\subsection*{CHAPTER 4: TOOL DEVELOPMENT}
+
+During the time spent working on these wide range topics the need of small and reliable analytical tools raised. Being able to analyze and draw a comparison beetween obtained results in a fast manner has been very important. \\
+Across this chapter will be presented a tiny python implementation for fast data analysis and graphs creation.
+
+\newpage
 \tableofcontents
 
-\chapter{Introduction}
+% First chapter
 \subfile{Chapters/Introduction.tex}
 
-\chapter{Result and discussion}
+% Second chapter
 \subfile{Chapters/ResultAndDiscussion.tex}
 
-\chapter{Experimental section}
+% Third chapter
 \subfile{Chapters/ExperimentalSection.tex}
+
 
 \end{document}
 
