feat: basic setup for bibliography

--- a/Master.tex
+++ b/Master.tex
@@ -60,7 +60,6 @@ Across this chapter will be presented a tiny python implementation for fast data
 % Third chapter
 \subfile{Chapters/ExperimentalSection.tex}
 
-
+\bibliographystyle{plain}
+\bibliography{Bibliography}
 \end{document}
-
-
