--- a/Preamble.sty
+++ b/Preamble.sty
@@ -2,6 +2,7 @@
 \usepackage{mathtools}
 \usepackage{parskip}
 \usepackage{unicode-math}
+\usepackage{natbib}
 \usepackage{tabularx} % extra features for tabular environment
 \usepackage{amsmath}  % improve math presentation
 \usepackage{graphicx} % takes care of graphic including machinery
