chore: small refactoring

--- a/Master.tex
+++ b/Master.tex
@@ -29,17 +29,13 @@
 \chapter*{Summary}
 
 \subsection*{CHAPTER 1: INTRODUCTION}
-Over the past 150 year supramolecular chemistry has grown at an exponential rate, with the field expanding to embrace a wide range of applications, in what can be the described as a new chemical space.\\
-This chapter aims to provide a brief historical account of the most notable development in supramolecular chemistry, focusing on MOFs and 3D periodic structures as well as their implementation in gas adsorption and electrochemistry applications.
+Over the past 150 year supramolecular chemistry has grown at an exponential rate, with the field expanding to embrace a wide range of applications, in what can be the described as a new chemical space. This chapter aims to provide a brief historical account of the most notable development in supramolecular chemistry, focusing on MOFs and 3D periodic structures as well as their implementation in gas adsorption and electrochemistry applications.
 \newline\subsection*{CHAPTER 2: RESULT AND DISCUSSION}
-The construction of 3D periodic solid structure oriented towards specific gas adsorption remain a challenging synthetic problem for chemists, several problems related to their development and use must be accounted.\\
-In this chapter will be reported the advancement in the synthesis of a pyrazole based ligand and the utilization of a 1,3-diketones ligand in electrochemistry oriented application.
+The construction of 3D periodic solid structure oriented towards specific gas adsorption remain a challenging synthetic problem for chemists, several problems related to their development and use must be accounted.In this chapter will be reported the advancement in the synthesis of a pyrazole based ligand and the utilization of a 1,3-diketones ligand in electrochemistry oriented application.
 \newline\subsection*{CHAPTER 3: EXPERIMENTAL SECTION}
-Several synthesis and characterization method as been applied, both in the synthesis of pyrazole based ligand and 1,3-diketones MOF electrochemistry exploration, in order to achieve the results discussed earlier. \\
-They will be analyzed in great detail in this chapter.
+Several synthesis and characterization method as been applied, both in the synthesis of pyrazole based ligand and 1,3-diketones MOF electrochemistry exploration, in order to achieve the results discussed earlier.They will be analyzed in great detail in this chapter.
 \newline\subsection*{CHAPTER 4: TOOL DEVELOPMENT}
-During the time spent working on these wide range topics the need of small and reliable analytical tools raised. Being able to analyze and draw a comparison between obtained results in a fast manner has been very important. \\
-Across this chapter will be presented a tiny python implementation for fast data analysis and graphs creation.
+During the time spent working on these wide range topics the need of small and reliable analytical tools raised. Being able to analyze and draw a comparison between obtained results in a fast manner has been very important. Across this chapter will be presented a tiny python implementation for fast data analysis and graphs creation based on matplotlib.
 
 \newpage
 \tableofcontents
