chore: update bib

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -37,23 +37,6 @@
 	file = {Blatov_et_al_2014_Applied_Topological_Analysis_of_Crystal_Structures_with_the_Program_Package.pdf:/home/stefanom/GoogleDrive/Zot/Blatov_et_al_2014_Applied_Topological_Analysis_of_Crystal_Structures_with_the_Program_Package.pdf:application/pdf},
 }
 
-@article{smith_reactions_1968,
-	title = {Reactions of hydrazines with esters and carboxylic acids},
-	volume = {33},
-	issn = {0022-3263, 1520-6904},
-	url = {https://pubs.acs.org/doi/abs/10.1021/jo01266a085},
-	doi = {10.1021/jo01266a085},
-	language = {en},
-	number = {2},
-	urldate = {2023-04-17},
-	journal = {The Journal of Organic Chemistry},
-	author = {Smith, Richard Frederick and Bates, Alvin C. and Battisti, Angello J. and Byrnes, Peter G. and Mroz, Christine T. and Smearing, Thomas J. and Albrecht, Frederick X.},
-	month = feb,
-	year = {1968},
-	pages = {851--855},
-	file = {jo01266a085.pdf:/home/stefanom/GoogleDrive/Zot/jo01266a085.pdf:application/pdf},
-}
-
 @article{erdman_reaction_2004,
 	title = {The {Reaction} of {Hydrazine} with α‐{Cyanocinnamate} {Esters}: {A} {Caveat}},
 	volume = {34},
@@ -71,86 +54,77 @@
 	pages = {1163--1171},
 }
 
-@article{carlucci_heterometallic_2010,
-	title = {Heterometallic {Modular} {Metal}–{Organic} {3D} {Frameworks} {Assembled} via {New} {Tris}‐β‐{Diketonate} {Metalloligands}: {Nanoporous} {Materials} for {Anion} {Exchange} and {Scaffolding} of {Selected} {Anionic} {Guests}},
-	volume = {16},
-	issn = {0947-6539, 1521-3765},
-	shorttitle = {Heterometallic {Modular} {Metal}–{Organic} {3D} {Frameworks} {Assembled} via {New} {Tris}‐β‐{Diketonate} {Metalloligands}},
-	url = {https://onlinelibrary.wiley.com/doi/10.1002/chem.201001256},
-	doi = {10.1002/chem.201001256},
+@article{smith_reactions_1968,
+	title = {Reactions of hydrazines with esters and carboxylic acids},
+	volume = {33},
+	issn = {0022-3263, 1520-6904},
+	url = {https://pubs.acs.org/doi/abs/10.1021/jo01266a085},
+	doi = {10.1021/jo01266a085},
 	language = {en},
-	number = {41},
-	urldate = {2023-05-01},
-	journal = {Chemistry – A European Journal},
-	author = {Carlucci, Lucia and Ciani, Gianfranco and Maggini, Simona and Proserpio, Davide M. and Visconti, Marco},
-	month = nov,
-	year = {2010},
-	pages = {12328--12341},
-	file = {Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New.pdf:/home/stefanom/GoogleDrive/Zot/Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New2.pdf:application/pdf},
-}
-
-@article{bland_rapid_1976,
-	title = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth: a controlled, prospective trial},
-	volume = {124},
-	issn = {0002-9378},
-	shorttitle = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth},
-	doi = {10.1016/0002-9378(76)90154-x},
-	abstract = {We conducted a controlled, prospective trial to evaluate the effectiveness of rapidly infusing sodium bicarbonate (NaHCO3) and salt-poor albumin into high-risk, premature infants in the first 2 hours of life. Fifty-three infants, randomized into one of four treatment groups, received 8 ml. per kilogram of a solution containing either (A) glucose in water, (B) salt-poor albumin, (C) NaHCO3, or (D) a combination of albumin and NaHCO3. After the initial infusion, the babies received no colloid or alkali solutions until 4 hours of age. We managed them supportively with warmth, appropriate oxygen administration, isotonic fluid infusion, and close monitoring. Among the infants who received alkali, 14 of 26 acquired the respiratory distress syndrome (RDS), 11 died, and four had intracranial hemorrhage. Among babies who received no alkali, RDS occurred in 11 of 27, 5 died, and none had intracranial hemorrhage. These results do not support the common practice of rapidly infusing NaHCO3 into high-risk, premature infants, and they suggest that the early management of such infants needs renewed critical evaluation.},
-	language = {eng},
-	number = {3},
-	journal = {American Journal of Obstetrics and Gynecology},
-	author = {Bland, R. D. and Clarke, T. L. and Harden, L. B.},
+	number = {2},
+	urldate = {2023-04-17},
+	journal = {The Journal of Organic Chemistry},
+	author = {Smith, Richard Frederick and Bates, Alvin C. and Battisti, Angello J. and Byrnes, Peter G. and Mroz, Christine T. and Smearing, Thomas J. and Albrecht, Frederick X.},
 	month = feb,
-	year = {1976},
-	pmid = {2013},
-	keywords = {Acidosis, Albumins, Bicarbonates, Carbon Dioxide, Cerebral Hemorrhage, Female, Hawaii, Humans, Hydrogen-Ion Concentration, Infant, Newborn, Infant, Premature, Diseases, Infusions, Parenteral, Male, Prospective Studies, Respiratory Distress Syndrome, Newborn, Sodium, Time Factors},
-	pages = {263--267},
+	year = {1968},
+	pages = {851--855},
+	file = {jo01266a085.pdf:/home/stefanom/GoogleDrive/Zot/jo01266a085.pdf:application/pdf},
 }
 
-@article{weinman_uric_1976,
-	title = {Uric acid and the kidney},
-	volume = {3},
-	issn = {0092-2900},
-	language = {eng},
-	journal = {Perspectives in Nephrology and Hypertension},
-	author = {Weinman, E. J.},
-	year = {1976},
-	pmid = {2900},
-	keywords = {Humans, Hydrogen-Ion Concentration, Acute Kidney Injury, Ammonia, Animals, Glomerular Filtration Rate, Glutamine, Gout, Kidney, Kidney Calculi, Kidney Diseases, Kidney Failure, Chronic, Kidney Tubules, Metabolic Diseases, Pyrazines, Uric Acid},
-	pages = {141--158},
-}
-
-@article{ochs_double-blind_1975,
-	title = {[{Double}-blind clinical study of rohypnol (author's transl)]},
-	volume = {64},
-	issn = {1013-2058},
-	language = {ger},
-	number = {31},
-	journal = {Schweizerische Rundschau Fur Medizin Praxis = Revue Suisse De Medecine Praxis},
-	author = {Ochs, D.},
-	month = aug,
-	year = {1975},
-	pmid = {2908},
-	keywords = {Humans, Anti-Anxiety Agents, Benzodiazepines, Clinical Trials as Topic, Diphenhydramine, Drug Evaluation, Sleep Wake Disorders},
-	pages = {999--1001},
-}
-
-@article{konkov_synthesis_2009,
-	title = {Synthesis of pyrazoles and pyrazolones from 1,3- and 1,4-diketones of the adamantane series},
-	volume = {45},
-	issn = {1070-4280, 1608-3393},
-	url = {http://link.springer.com/10.1134/S1070428009120124},
-	doi = {10.1134/S1070428009120124},
-	abstract = {Various pyrazole and dihydropyrazolones containing an adamantane fragment were synthesized from adamantyl-substituted 1,3- and 1,4-diketones, ethyl 4-(1-adamantyl)-2-R-4-oxobutanoates (R = CN, Ac), and ethyl 2-(1-adamantylcarbonyl)-4-oxo-4-phenylbutanoate.},
+@article{nagpal_synthesis_2001,
+	title = {{SYNTHESIS} {OF} 1, 3-{DIKETONE} {AND} {ITS} {REACTION} {WITH} {DIFFERENT} {N}-{NUCLEOPHILES} ({PART} {I})},
+	volume = {7},
+	issn = {2191-0197, 0793-0283},
+	url = {https://www.degruyter.com/document/doi/10.1515/HC.2001.7.6.589/html},
+	doi = {10.1515/HC.2001.7.6.589},
+	abstract = {Treatment of resorcinol with ethyl acetoacetate in presence of conc. sulphuric acid led to formation of 1,3-diketone 3 in several steps, which on reaction with ethylene diamine 4, phenylene diamine 5, hydroxylamine 8, phenyl hydrazine 9 and hydrazine 10 led to formation of 1,4-diazepine 3a, 1, 5-benzodiazepine 3b, isoxazole 3c and pyrazole 3d derivatives respectively.},
 	language = {en},
-	number = {12},
+	number = {6},
 	urldate = {2023-04-18},
-	journal = {Russian Journal of Organic Chemistry},
-	author = {Kon’kov, S. A. and Moiseev, I. K.},
+	journal = {Heterocyclic Communications},
+	author = {Nagpal, Anita and Unny, Rashmy and Joshi, P. and Joshi, Y.C.},
+	month = jan,
+	year = {2001},
+	file = {10.1515_hc.2001.7.6.589.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2001.7.6.589.pdf:application/pdf},
+}
+
+@article{joshi_synthesis_2004,
+	title = {{SYNTHESIS} {OF} {NOVEL} {PYRAZOLE} {DERIVATIVES} {FROM} {DIARYL} 1,3-{DIKETONES} ({PART}-{II})},
+	volume = {10},
+	issn = {2191-0197, 0793-0283},
+	url = {https://www.degruyter.com/document/doi/10.1515/HC.2004.10.2-3.249/html},
+	doi = {10.1515/HC.2004.10.2-3.249},
+	abstract = {Some 3,5-disubstituted pyrazoles derivatives (2a-2f) have been synthesized. Their structure were confirmed by elemental analysis, IR, 'H NMR, l3C NMR and MS spectral studies.},
+	language = {en},
+	number = {2-3},
+	urldate = {2023-04-18},
+	journal = {Heterocyclic Communications},
+	author = {Joshi, Y.C. and Joshi, P. and Chauhan, Suresh Singh and Nigam, Sandeep},
+	month = jan,
+	year = {2004},
+	file = {10.1515_hc.2004.10.2-3.249.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2004.10.2-3.249.pdf:application/pdf},
+}
+
+@article{cinar_synthesis_2021,
+	title = {Synthesis of {New} {Pyrazole} {Compounds} via {Diketonic} {Michael} {Adducts}},
+	issn = {1303-5002},
+	url = {https://dergipark.org.tr/en/doi/10.15671/hjbc.954044},
+	doi = {10.15671/hjbc.954044},
+	language = {en},
+	urldate = {2023-04-18},
+	journal = {Hacettepe Journal of Biology and Chemistry},
+	author = {Çinar, Seda and Eren, Aslı},
 	month = dec,
-	year = {2009},
-	pages = {1824--1828},
-	file = {S1070428009120124.pdf:/home/stefanom/GoogleDrive/Zot/S1070428009120124.pdf:application/pdf},
+	year = {2021},
+	file = {10.15671-hjbc.954044-1830404.pdf:/home/stefanom/GoogleDrive/Zot/10.15671-hjbc.954044-1830404.pdf:application/pdf},
+}
+
+@article{cetin_synthesis_nodate,
+	title = {Synthesis of {Some} {New} {Pyrazoles}},
+	abstract = {In this paper, firstly, 2-(2-(4-bromophenyl)hydrazino)-1-(2-(hydroxyphenyl)-3-phenylpropane-1,3-dione (1), which is a starting material, was synthesized. Then, the new substituted pyrazoles derivatives (2a-e) were obtained via the reaction-starting material and various hydrazines. The structures of newly-synthesized compounds were determined by spectroscopic methods.},
+	language = {en},
+	author = {Çetin, Adnan},
+	file = {Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:/home/stefanom/GoogleDrive/Zot/Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:application/pdf},
 }
 
 @article{fustero_improved_2008,
@@ -171,63 +145,86 @@
 	file = {Improved_Regioselectivity_in_Pyrazole_Fo.pdf:/home/stefanom/GoogleDrive/Zot/Improved_Regioselectivity_in_Pyrazole_Fo.pdf:application/pdf},
 }
 
-@article{cetin_synthesis_nodate,
-	title = {Synthesis of {Some} {New} {Pyrazoles}},
-	abstract = {In this paper, firstly, 2-(2-(4-bromophenyl)hydrazino)-1-(2-(hydroxyphenyl)-3-phenylpropane-1,3-dione (1), which is a starting material, was synthesized. Then, the new substituted pyrazoles derivatives (2a-e) were obtained via the reaction-starting material and various hydrazines. The structures of newly-synthesized compounds were determined by spectroscopic methods.},
+@article{konkov_synthesis_2009,
+	title = {Synthesis of pyrazoles and pyrazolones from 1,3- and 1,4-diketones of the adamantane series},
+	volume = {45},
+	issn = {1070-4280, 1608-3393},
+	url = {http://link.springer.com/10.1134/S1070428009120124},
+	doi = {10.1134/S1070428009120124},
+	abstract = {Various pyrazole and dihydropyrazolones containing an adamantane fragment were synthesized from adamantyl-substituted 1,3- and 1,4-diketones, ethyl 4-(1-adamantyl)-2-R-4-oxobutanoates (R = CN, Ac), and ethyl 2-(1-adamantylcarbonyl)-4-oxo-4-phenylbutanoate.},
 	language = {en},
-	author = {Çetin, Adnan},
-	file = {Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:/home/stefanom/GoogleDrive/Zot/Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:application/pdf},
-}
-
-@article{cinar_synthesis_2021,
-	title = {Synthesis of {New} {Pyrazole} {Compounds} via {Diketonic} {Michael} {Adducts}},
-	issn = {1303-5002},
-	url = {https://dergipark.org.tr/en/doi/10.15671/hjbc.954044},
-	doi = {10.15671/hjbc.954044},
-	language = {en},
+	number = {12},
 	urldate = {2023-04-18},
-	journal = {Hacettepe Journal of Biology and Chemistry},
-	author = {Çinar, Seda and Eren, Aslı},
+	journal = {Russian Journal of Organic Chemistry},
+	author = {Kon’kov, S. A. and Moiseev, I. K.},
 	month = dec,
-	year = {2021},
-	file = {10.15671-hjbc.954044-1830404.pdf:/home/stefanom/GoogleDrive/Zot/10.15671-hjbc.954044-1830404.pdf:application/pdf},
+	year = {2009},
+	pages = {1824--1828},
+	file = {S1070428009120124.pdf:/home/stefanom/GoogleDrive/Zot/S1070428009120124.pdf:application/pdf},
 }
 
-@article{joshi_synthesis_2004,
-	title = {{SYNTHESIS} {OF} {NOVEL} {PYRAZOLE} {DERIVATIVES} {FROM} {DIARYL} 1,3-{DIKETONES} ({PART}-{II})},
-	volume = {10},
-	issn = {2191-0197, 0793-0283},
-	url = {https://www.degruyter.com/document/doi/10.1515/HC.2004.10.2-3.249/html},
-	doi = {10.1515/HC.2004.10.2-3.249},
-	abstract = {Some 3,5-disubstituted pyrazoles derivatives (2a-2f) have been synthesized. Their structure were confirmed by elemental analysis, IR, 'H NMR, l3C NMR and MS spectral studies.},
+@article{weinman_uric_1976,
+	title = {Uric acid and the kidney},
+	volume = {3},
+	issn = {0092-2900},
+	language = {eng},
+	journal = {Perspectives in Nephrology and Hypertension},
+	author = {Weinman, E. J.},
+	year = {1976},
+	pmid = {2900},
+	keywords = {Acute Kidney Injury, Ammonia, Animals, Glomerular Filtration Rate, Glutamine, Gout, Humans, Hydrogen-Ion Concentration, Kidney, Kidney Calculi, Kidney Diseases, Kidney Failure, Chronic, Kidney Tubules, Metabolic Diseases, Pyrazines, Uric Acid},
+	pages = {141--158},
+}
+
+@article{bland_rapid_1976,
+	title = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth: a controlled, prospective trial},
+	volume = {124},
+	issn = {0002-9378},
+	shorttitle = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth},
+	doi = {10.1016/0002-9378(76)90154-x},
+	abstract = {We conducted a controlled, prospective trial to evaluate the effectiveness of rapidly infusing sodium bicarbonate (NaHCO3) and salt-poor albumin into high-risk, premature infants in the first 2 hours of life. Fifty-three infants, randomized into one of four treatment groups, received 8 ml. per kilogram of a solution containing either (A) glucose in water, (B) salt-poor albumin, (C) NaHCO3, or (D) a combination of albumin and NaHCO3. After the initial infusion, the babies received no colloid or alkali solutions until 4 hours of age. We managed them supportively with warmth, appropriate oxygen administration, isotonic fluid infusion, and close monitoring. Among the infants who received alkali, 14 of 26 acquired the respiratory distress syndrome (RDS), 11 died, and four had intracranial hemorrhage. Among babies who received no alkali, RDS occurred in 11 of 27, 5 died, and none had intracranial hemorrhage. These results do not support the common practice of rapidly infusing NaHCO3 into high-risk, premature infants, and they suggest that the early management of such infants needs renewed critical evaluation.},
+	language = {eng},
+	number = {3},
+	journal = {American Journal of Obstetrics and Gynecology},
+	author = {Bland, R. D. and Clarke, T. L. and Harden, L. B.},
+	month = feb,
+	year = {1976},
+	pmid = {2013},
+	keywords = {Humans, Hydrogen-Ion Concentration, Acidosis, Albumins, Bicarbonates, Carbon Dioxide, Cerebral Hemorrhage, Female, Hawaii, Infant, Newborn, Infant, Premature, Diseases, Infusions, Parenteral, Male, Prospective Studies, Respiratory Distress Syndrome, Newborn, Sodium, Time Factors},
+	pages = {263--267},
+}
+
+@article{ochs_double-blind_1975,
+	title = {[{Double}-blind clinical study of rohypnol (author's transl)]},
+	volume = {64},
+	issn = {1013-2058},
+	language = {ger},
+	number = {31},
+	journal = {Schweizerische Rundschau Fur Medizin Praxis = Revue Suisse De Medecine Praxis},
+	author = {Ochs, D.},
+	month = aug,
+	year = {1975},
+	pmid = {2908},
+	keywords = {Humans, Anti-Anxiety Agents, Benzodiazepines, Clinical Trials as Topic, Diphenhydramine, Drug Evaluation, Sleep Wake Disorders},
+	pages = {999--1001},
+}
+
+@article{carlucci_heterometallic_2010,
+	title = {Heterometallic {Modular} {Metal}–{Organic} {3D} {Frameworks} {Assembled} via {New} {Tris}‐β‐{Diketonate} {Metalloligands}: {Nanoporous} {Materials} for {Anion} {Exchange} and {Scaffolding} of {Selected} {Anionic} {Guests}},
+	volume = {16},
+	issn = {0947-6539, 1521-3765},
+	shorttitle = {Heterometallic {Modular} {Metal}–{Organic} {3D} {Frameworks} {Assembled} via {New} {Tris}‐β‐{Diketonate} {Metalloligands}},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/chem.201001256},
+	doi = {10.1002/chem.201001256},
 	language = {en},
-	number = {2-3},
-	urldate = {2023-04-18},
-	journal = {Heterocyclic Communications},
-	author = {Joshi, Y.C. and Joshi, P. and Chauhan, Suresh Singh and Nigam, Sandeep},
-	month = jan,
-	year = {2004},
-	file = {10.1515_hc.2004.10.2-3.249.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2004.10.2-3.249.pdf:application/pdf},
-}
-
-@article{nagpal_synthesis_2001,
-	title = {{SYNTHESIS} {OF} 1, 3-{DIKETONE} {AND} {ITS} {REACTION} {WITH} {DIFFERENT} {N}-{NUCLEOPHILES} ({PART} {I})},
-	volume = {7},
-	issn = {2191-0197, 0793-0283},
-	url = {https://www.degruyter.com/document/doi/10.1515/HC.2001.7.6.589/html},
-	doi = {10.1515/HC.2001.7.6.589},
-	abstract = {Treatment of resorcinol with ethyl acetoacetate in presence of conc. sulphuric acid led to formation of 1,3-diketone 3 in several steps, which on reaction with ethylene diamine 4, phenylene diamine 5, hydroxylamine 8, phenyl hydrazine 9 and hydrazine 10 led to formation of 1,4-diazepine 3a, 1, 5-benzodiazepine 3b, isoxazole 3c and pyrazole 3d derivatives respectively.},
-	language = {en},
-	number = {6},
-	urldate = {2023-04-18},
-	journal = {Heterocyclic Communications},
-	author = {Nagpal, Anita and Unny, Rashmy and Joshi, P. and Joshi, Y.C.},
-	month = jan,
-	year = {2001},
-	file = {10.1515_hc.2001.7.6.589.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2001.7.6.589.pdf:application/pdf},
-}
-
-@article{noauthor_notitle_nodate,
+	number = {41},
+	urldate = {2023-05-01},
+	journal = {Chemistry – A European Journal},
+	author = {Carlucci, Lucia and Ciani, Gianfranco and Maggini, Simona and Proserpio, Davide M. and Visconti, Marco},
+	month = nov,
+	year = {2010},
+	pages = {12328--12341},
+	file = {Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New.pdf:/home/stefanom/GoogleDrive/Zot/Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New2.pdf:application/pdf},
 }
 
 @article{rodriguez-villar_design_2021,
@@ -248,70 +245,7 @@
 	file = {Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:/home/stefanom/GoogleDrive/Zot/Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:application/pdf},
 }
 
-@article{odelola_characterization_1975,
-	title = {Characterization of {Nigerian} strains of {West} {Nile} virus by plaque formation},
-	volume = {19},
-	issn = {0001-723X},
-	abstract = {Seven strains of West nile virus isolated in Nigeria were investigated for their ability to form plaques in monkey kidney cell monolayers. Five strains antigenically related to one another produced plaques of about the same size 3 to 4 days after the addition of the overlay medium. The two other strains closely related to each other produced no plaques. Their inability to produce plaques was regarded as a significant characteristic of the intratypic group to which the two strains belong.},
-	language = {eng},
-	number = {6},
-	journal = {Acta Virologica},
-	author = {Odelola, H. A. and Koza, J.},
-	month = nov,
-	year = {1975},
-	pmid = {1995},
-	keywords = {Animals, Ascitic Fluid, Cell Line, Cercopithecus, Cross Reactions, Haplorhini, Immune Sera, Kidney, Mice, Neutralization Tests, Nigeria, Viral Plaque Assay, Virus Replication, West Nile virus},
-	pages = {489--492},
-}
-
-@article{makar_formate_1975,
-	title = {Formate assay in body fluids: application in methanol poisoning},
-	volume = {13},
-	issn = {0006-2944},
-	shorttitle = {Formate assay in body fluids},
-	doi = {10.1016/0006-2944(75)90147-7},
-	language = {eng},
-	number = {2},
-	journal = {Biochemical Medicine},
-	author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-	month = jun,
-	year = {1975},
-	pmid = {1},
-	keywords = {Aldehyde Oxidoreductases, Animals, Body Fluids, Carbon Dioxide, Formates, Haplorhini, Humans, Hydrogen-Ion Concentration, Kinetics, Methanol, Methods, Pseudomonas},
-	pages = {117--126},
-}
-
-@article{serfontein_new_1976,
-	title = {A new g.c. procedure, based on nitrosation, for the simultaneous determination of propoxyphene and norpropoxyphene in biological material},
-	volume = {28},
-	issn = {0022-3573},
-	doi = {10.1111/j.2042-7158.1976.tb02847.x},
-	language = {eng},
-	number = {9},
-	journal = {The Journal of Pharmacy and Pharmacology},
-	author = {Serfontein, W. J. and de Villiers, L. S.},
-	month = sep,
-	year = {1976},
-	pmid = {10401},
-	keywords = {Chromatography, Gas, Cocaine, Dextropropoxyphene, Methods, Nitroso Compounds},
-	pages = {718--719},
-}
-
-@article{heazell_proceedings_1975,
-	title = {Proceedings: {Is} {ATP} an inhibitory neurotransmitter in the rat stomach},
-	volume = {55},
-	issn = {0007-1188},
-	shorttitle = {Proceedings},
-	language = {eng},
-	number = {2},
-	journal = {British Journal of Pharmacology},
-	author = {Heazell, M. A.},
-	month = oct,
-	year = {1975},
-	pmid = {117},
-	pmcid = {PMC1666776},
-	keywords = {Adenosine Triphosphate, Animals, In Vitro Techniques, Muscle Contraction, Neurotransmitter Agents, Rats, Stomach, Synaptic Transmission},
-	pages = {285P--286P},
+@article{noauthor_notitle_nodate,
 }
 
 @article{yaghi_hydrothermal_1995,
@@ -328,4 +262,119 @@
 	month = oct,
 	year = {1995},
 	pages = {10401--10402},
+}
+
+@article{makar_formate_1975,
+	title = {Formate assay in body fluids: application in methanol poisoning},
+	volume = {13},
+	issn = {0006-2944},
+	shorttitle = {Formate assay in body fluids},
+	doi = {10.1016/0006-2944(75)90147-7},
+	language = {eng},
+	number = {2},
+	journal = {Biochemical Medicine},
+	author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
+	month = jun,
+	year = {1975},
+	pmid = {1},
+	keywords = {Animals, Humans, Hydrogen-Ion Concentration, Carbon Dioxide, Aldehyde Oxidoreductases, Body Fluids, Formates, Haplorhini, Kinetics, Methanol, Methods, Pseudomonas},
+	pages = {117--126},
+}
+
+@article{heazell_proceedings_1975,
+	title = {Proceedings: {Is} {ATP} an inhibitory neurotransmitter in the rat stomach},
+	volume = {55},
+	issn = {0007-1188},
+	shorttitle = {Proceedings},
+	language = {eng},
+	number = {2},
+	journal = {British Journal of Pharmacology},
+	author = {Heazell, M. A.},
+	month = oct,
+	year = {1975},
+	pmid = {117},
+	pmcid = {PMC1666776},
+	keywords = {Animals, Adenosine Triphosphate, In Vitro Techniques, Muscle Contraction, Neurotransmitter Agents, Rats, Stomach, Synaptic Transmission},
+	pages = {285P--286P},
+}
+
+@article{serfontein_new_1976,
+	title = {A new g.c. procedure, based on nitrosation, for the simultaneous determination of propoxyphene and norpropoxyphene in biological material},
+	volume = {28},
+	issn = {0022-3573},
+	doi = {10.1111/j.2042-7158.1976.tb02847.x},
+	language = {eng},
+	number = {9},
+	journal = {The Journal of Pharmacy and Pharmacology},
+	author = {Serfontein, W. J. and de Villiers, L. S.},
+	month = sep,
+	year = {1976},
+	pmid = {10401},
+	keywords = {Methods, Chromatography, Gas, Cocaine, Dextropropoxyphene, Nitroso Compounds},
+	pages = {718--719},
+}
+
+@article{odelola_characterization_1975,
+	title = {Characterization of {Nigerian} strains of {West} {Nile} virus by plaque formation},
+	volume = {19},
+	issn = {0001-723X},
+	abstract = {Seven strains of West nile virus isolated in Nigeria were investigated for their ability to form plaques in monkey kidney cell monolayers. Five strains antigenically related to one another produced plaques of about the same size 3 to 4 days after the addition of the overlay medium. The two other strains closely related to each other produced no plaques. Their inability to produce plaques was regarded as a significant characteristic of the intratypic group to which the two strains belong.},
+	language = {eng},
+	number = {6},
+	journal = {Acta Virologica},
+	author = {Odelola, H. A. and Koza, J.},
+	month = nov,
+	year = {1975},
+	pmid = {1995},
+	keywords = {Animals, Kidney, Haplorhini, Ascitic Fluid, Cell Line, Cercopithecus, Cross Reactions, Immune Sera, Mice, Neutralization Tests, Nigeria, Viral Plaque Assay, Virus Replication, West Nile virus},
+	pages = {489--492},
+}
+
+@article{desiraju_chemistry_2001,
+	title = {Chemistry beyond the molecule},
+	volume = {412},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/35086640},
+	doi = {10.1038/35086640},
+	language = {en},
+	number = {6845},
+	urldate = {2023-07-06},
+	journal = {Nature},
+	author = {Desiraju, Gautam R.},
+	month = jul,
+	year = {2001},
+	pages = {397--400},
+}
+
+@article{vigato_evolution_2009,
+	title = {The evolution of β-diketone or β-diketophenol ligands and related complexes},
+	volume = {253},
+	issn = {00108545},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0010854508001343},
+	doi = {10.1016/j.ccr.2008.07.013},
+	language = {en},
+	number = {7-8},
+	urldate = {2023-07-06},
+	journal = {Coordination Chemistry Reviews},
+	author = {Vigato, P. Alessandro and Peruzzo, Valentina and Tamburini, Sergio},
+	month = apr,
+	year = {2009},
+	pages = {1099--1201},
+}
+
+@article{aromi_poly_2008,
+	title = {Poly beta-diketones: {Prime} ligands to generate supramolecular metalloclusters},
+	volume = {252},
+	issn = {00108545},
+	shorttitle = {Poly beta-diketones},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0010854507001488},
+	doi = {10.1016/j.ccr.2007.07.008},
+	language = {en},
+	number = {8-9},
+	urldate = {2023-07-06},
+	journal = {Coordination Chemistry Reviews},
+	author = {Aromí, Guillem and Gamez, Patrick and Reedijk, Jan},
+	month = apr,
+	year = {2008},
+	pages = {964--989},
 }
