feat: add CV bib entry

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -163,19 +163,6 @@
 	file = {S1070428009120124.pdf:/home/stefanom/GoogleDrive/Zot/S1070428009120124.pdf:application/pdf},
 }
 
-@article{weinman_uric_1976,
-	title = {Uric acid and the kidney},
-	volume = {3},
-	issn = {0092-2900},
-	language = {eng},
-	journal = {Perspectives in Nephrology and Hypertension},
-	author = {Weinman, E. J.},
-	year = {1976},
-	pmid = {2900},
-	keywords = {Acute Kidney Injury, Ammonia, Animals, Glomerular Filtration Rate, Glutamine, Gout, Humans, Hydrogen-Ion Concentration, Kidney, Kidney Calculi, Kidney Diseases, Kidney Failure, Chronic, Kidney Tubules, Metabolic Diseases, Pyrazines, Uric Acid},
-	pages = {141--158},
-}
-
 @article{bland_rapid_1976,
 	title = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth: a controlled, prospective trial},
 	volume = {124},
@@ -192,21 +179,6 @@
 	pmid = {2013},
 	keywords = {Humans, Hydrogen-Ion Concentration, Acidosis, Albumins, Bicarbonates, Carbon Dioxide, Cerebral Hemorrhage, Female, Hawaii, Infant, Newborn, Infant, Premature, Diseases, Infusions, Parenteral, Male, Prospective Studies, Respiratory Distress Syndrome, Newborn, Sodium, Time Factors},
 	pages = {263--267},
-}
-
-@article{ochs_double-blind_1975,
-	title = {[{Double}-blind clinical study of rohypnol (author's transl)]},
-	volume = {64},
-	issn = {1013-2058},
-	language = {ger},
-	number = {31},
-	journal = {Schweizerische Rundschau Fur Medizin Praxis = Revue Suisse De Medecine Praxis},
-	author = {Ochs, D.},
-	month = aug,
-	year = {1975},
-	pmid = {2908},
-	keywords = {Humans, Anti-Anxiety Agents, Benzodiazepines, Clinical Trials as Topic, Diphenhydramine, Drug Evaluation, Sleep Wake Disorders},
-	pages = {999--1001},
 }
 
 @article{carlucci_heterometallic_2010,
@@ -245,9 +217,6 @@
 	file = {Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:/home/stefanom/GoogleDrive/Zot/Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:application/pdf},
 }
 
-@article{noauthor_notitle_nodate,
-}
-
 @article{yaghi_hydrothermal_1995,
 	title = {Hydrothermal {Synthesis} of a {Metal}-{Organic} {Framework} {Containing} {Large} {Rectangular} {Channels}},
 	volume = {117},
@@ -279,39 +248,6 @@
 	pmid = {1},
 	keywords = {Animals, Humans, Hydrogen-Ion Concentration, Carbon Dioxide, Aldehyde Oxidoreductases, Body Fluids, Formates, Haplorhini, Kinetics, Methanol, Methods, Pseudomonas},
 	pages = {117--126},
-}
-
-@article{heazell_proceedings_1975,
-	title = {Proceedings: {Is} {ATP} an inhibitory neurotransmitter in the rat stomach},
-	volume = {55},
-	issn = {0007-1188},
-	shorttitle = {Proceedings},
-	language = {eng},
-	number = {2},
-	journal = {British Journal of Pharmacology},
-	author = {Heazell, M. A.},
-	month = oct,
-	year = {1975},
-	pmid = {117},
-	pmcid = {PMC1666776},
-	keywords = {Animals, Adenosine Triphosphate, In Vitro Techniques, Muscle Contraction, Neurotransmitter Agents, Rats, Stomach, Synaptic Transmission},
-	pages = {285P--286P},
-}
-
-@article{serfontein_new_1976,
-	title = {A new g.c. procedure, based on nitrosation, for the simultaneous determination of propoxyphene and norpropoxyphene in biological material},
-	volume = {28},
-	issn = {0022-3573},
-	doi = {10.1111/j.2042-7158.1976.tb02847.x},
-	language = {eng},
-	number = {9},
-	journal = {The Journal of Pharmacy and Pharmacology},
-	author = {Serfontein, W. J. and de Villiers, L. S.},
-	month = sep,
-	year = {1976},
-	pmid = {10401},
-	keywords = {Methods, Chromatography, Gas, Cocaine, Dextropropoxyphene, Nitroso Compounds},
-	pages = {718--719},
 }
 
 @article{odelola_characterization_1975,
@@ -377,4 +313,70 @@
 	month = apr,
 	year = {2008},
 	pages = {964--989},
+}
+
+@article{cong_highly_2021,
+	title = {Highly {Water}-{Permeable} {Metal}–{Organic} {Framework} {MOF}-303 {Membranes} for {Desalination}},
+	volume = {143},
+	issn = {0002-7863, 1520-5126},
+	url = {https://pubs.acs.org/doi/10.1021/jacs.1c10192},
+	doi = {10.1021/jacs.1c10192},
+	language = {en},
+	number = {48},
+	urldate = {2023-07-07},
+	journal = {Journal of the American Chemical Society},
+	author = {Cong, Shenzhen and Yuan, Ye and Wang, Jixiao and Wang, Zhi and Kapteijn, Freek and Liu, Xinlei},
+	month = dec,
+	year = {2021},
+	pages = {20055--20058},
+	file = {Cong_et_al_2021_Highly_Water-Permeable_Metal–Organic_Framework_MOF-303_Membranes_for.pdf:/home/stefanom/GoogleDrive/Zot/Cong_et_al_2021_Highly_Water-Permeable_Metal–Organic_Framework_MOF-303_Membranes_for.pdf:application/pdf},
+}
+
+@article{zheng_broadly_2022,
+	title = {Broadly {Tunable} {Atmospheric} {Water} {Harvesting} in {Multivariate} {Metal}–{Organic} {Frameworks}},
+	volume = {144},
+	issn = {0002-7863, 1520-5126},
+	url = {https://pubs.acs.org/doi/10.1021/jacs.2c09756},
+	doi = {10.1021/jacs.2c09756},
+	language = {en},
+	number = {49},
+	urldate = {2023-07-07},
+	journal = {Journal of the American Chemical Society},
+	author = {Zheng, Zhiling and Hanikel, Nikita and Lyu, Hao and Yaghi, Omar M.},
+	month = dec,
+	year = {2022},
+	pages = {22669--22675},
+}
+
+@article{elgrishi_practical_2018,
+	title = {A {Practical} {Beginner}’s {Guide} to {Cyclic} {Voltammetry}},
+	volume = {95},
+	issn = {0021-9584, 1938-1328},
+	url = {https://pubs.acs.org/doi/10.1021/acs.jchemed.7b00361},
+	doi = {10.1021/acs.jchemed.7b00361},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-09},
+	journal = {Journal of Chemical Education},
+	author = {Elgrishi, Noémie and Rountree, Kelley J. and McCarthy, Brian D. and Rountree, Eric S. and Eisenhart, Thomas T. and Dempsey, Jillian L.},
+	month = feb,
+	year = {2018},
+	pages = {197--206},
+	file = {Elgrishi_et_al_2018_A_Practical_Beginner’s_Guide_to_Cyclic_Voltammetry.pdf:/home/stefanom/GoogleDrive/Zot/Elgrishi_et_al_2018_A_Practical_Beginner’s_Guide_to_Cyclic_Voltammetry.pdf:application/pdf},
+}
+
+@article{pluczyk_using_2018,
+	title = {Using {Cyclic} {Voltammetry}, {UV}-{Vis}-{NIR}, and {EPR} {Spectroelectrochemistry} to {Analyze} {Organic} {Compounds}},
+	issn = {1940-087X},
+	url = {https://www.jove.com/t/56656/using-cyclic-voltammetry-uv-vis-nir-epr-spectroelectrochemistry-to},
+	doi = {10.3791/56656},
+	language = {en},
+	number = {140},
+	urldate = {2023-07-09},
+	journal = {Journal of Visualized Experiments},
+	author = {Pluczyk, Sandra and Vasylieva, Marharyta and Data, Przemyslaw},
+	month = oct,
+	year = {2018},
+	pages = {56656},
+	file = {Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:/home/stefanom/GoogleDrive/Zot/Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:application/pdf},
 }
