--- a/Master.tex
+++ b/Master.tex
@@ -52,6 +52,6 @@ During the time spent working on these wide range topics the need of small and r
 % Fourth chapter
 \subfile{Chapters/ToolDevelopment.tex}
 
-\bibliographystyle{plain}
-\bibliography{Bibliography}
+\bibliographystyle{unsrt}
+\bibliography{Bibliography.bib}
 \end{document}
