fix: .bib make language server unconfortable with completion

--- a/Master.tex
+++ b/Master.tex
@@ -52,6 +52,7 @@ During the time spent working on these wide range topics the need of small and r
 % Fourth chapter
 \subfile{Chapters/ToolDevelopment.tex}
 
+
 \bibliographystyle{unsrt}
-\bibliography{Bibliography.bib}
+\bibliography{Bibliography}
 \end{document}
